--- a/index.html
+++ b/index.html
@@ -6,6 +6,11 @@
     <title>My First Project</title>
 </head>
 <body>
-    <h1>Hello, World!</h1>
+    <h1>FIRST PROJECT FOR CS3338</h1>
+
+    <h1>Maybe notepad app</h1>
+
+
+	
 </body>
 </html>
